astro/src/styles/bootstrap.scss
@charset "UTF-8";

// Fontsource input
@import "@fontsource-variable/archivo";
@import "@fontsource/atkinson-hyperlegible/400.css";
@import "@fontsource/atkinson-hyperlegible/700.css";

// From https://getbootstrap.com/docs/5.3/customize/sass/#importing
// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
@import "bootstrap/scss/functions";

// 2. Include any default variable overrides here
$font-size-root:              18px;
$font-family-sans-serif:      'Atkinson Hyperlegible', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
$font-weight-bold:            700;

$h1-font-size:                2rem;
$h2-font-size:                1.75rem;
$h3-font-size:                1.5rem;
$h4-font-size:                1.25rem;
$h5-font-size:                1.1rem;
$h6-font-size:                1rem;
$headings-color:              #041058;
$headings-font-family:        'Archivo Variable', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
$headings-font-weight:        400;

$display-font-sizes: (
  1: 4rem,
  2: 3rem,
  3: 2.5rem,
  4: 2rem,
  5: 1.5rem,
  6: 1.25rem,
  65: 1.1rem,
  7: 1rem,
  8: 0.5rem,
);
$display-font-family: $headings-font-family;
$display-font-weight: 400;

$breadcrumb-font-size:        0.9em;
$breadcrumb-margin-bottom:    0;

$lead-font-size:              1.25rem;
$lead-font-weight:            400;

$navbar-brand-font-size:      1.3rem;
$navbar-brand-padding-y:      0;

$blockquote-font-size:        1.25em;
$code-color:                  #590455;

$container-padding-x:  3rem;

$color-mode-type:      media-query;

// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
@import "bootstrap/scss/variables";
@import "bootstrap/scss/variables-dark";

@import "./ac";

// 4. Include any default map overrides here
$custom-colors: (
  "ac": #041058,
  "ac2": #95B2E0,
  "ac3": #A9B6FB,
  "facebook": #4267B2,
  "instagram": #5B51D8,
  "linkedin": #2E64BC,
  "mastodon": #6364FF,
  "paypal": #253B80, // Dark cornflower blue
  "stripe": #625BF6, // Stripe Blurple
  "threads": black,
  "twitter": #1DA1F2,
);
$theme-colors: map-merge($theme-colors, $custom-colors);

// 5a. Include remainder of required parts
@import "bootstrap/scss/maps";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/utilities";

// Custom Themes: Light mode.
$custom-colors-text: ("ac": #041058);
$custom-colors-bg-subtle: ("ac": #8d9dfa);
$custom-colors-border-subtle: ("ac": #3754f6);

$theme-colors-text: map-merge($theme-colors-text, $custom-colors-text);
$theme-colors-bg-subtle: map-merge($theme-colors-bg-subtle, $custom-colors-bg-subtle);
$theme-colors-border-subtle: map-merge($theme-colors-border-subtle, $custom-colors-border-subtle);

// Custom Themes: Dark mode
$custom-colors-text-dark: ("ac": #8d9dfa);
$custom-colors-bg-subtle-dark: ("ac": #041058);
$custom-colors-border-subtle-dark: ("ac": #8d9dfa);

$theme-colors-text-dark: map-merge($theme-colors-text-dark, $custom-colors-text-dark);
$theme-colors-bg-subtle-dark: map-merge($theme-colors-bg-subtle-dark, $custom-colors-bg-subtle-dark);
$theme-colors-border-subtle-dark: map-merge($theme-colors-border-subtle-dark, $custom-colors-border-subtle-dark);

// Utilities API
$utilities: map-merge(
  $utilities,
  (
    "max-height": (
      property: max-height,
      class: mh,
      values: (
        50: 50vh,
        100: 100%,
      )
    ),
  )
);


// 5b. Include remainder of required parts
@import "bootstrap/scss/root";
@import "bootstrap/scss/reboot";

// 6. Optionally include any other parts as needed
//    Match the order from bootstrap/scss/bootstrap.scss
@import "bootstrap/scss/type";
@import "bootstrap/scss/images";
@import "bootstrap/scss/containers";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/buttons";
@import "bootstrap/scss/transitions";
@import "bootstrap/scss/dropdown";
@import "bootstrap/scss/nav";
@import "bootstrap/scss/navbar";
@import "bootstrap/scss/card";
@import "bootstrap/scss/breadcrumb";
@import "bootstrap/scss/list-group";
@import "bootstrap/scss/close";
@import "bootstrap/scss/placeholders";

// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
@import "bootstrap/scss/helpers";
@import "bootstrap/scss/utilities/api";

// 8. Add additional custom code here

.bg-ac-alpha-3 {
  @extend .bg-ac;
  --bs-bg-opacity: 0.3;
}

*:focus-visible, .form-field:focus, .toggle-menu:focus {
  outline: 3px dashed #041058;
  outline-offset: none;
  box-shadow: none;
  border-radius: 2%;
}

.form-field:focus {
  border-style: solid;
}

.btn:focus-visible {
  outline: 3px dashed #041058;
  outline-offset: 0.25rem;
  box-shadow: none;
  border-radius: 0.375rem;
}

.navbar-brand, .text-brand {
  font-family: $headings-font-family;
}

@include color-mode(dark) {
  .text-ac {
    color: white !important;
  }
  h1, h2, h3, h4, h5, h6 {
    color: var(--bs-primary-text-emphasis);
  }
  .bi {
    filter: invert(75%) sepia(53%) saturate(3857%) hue-rotate(191deg) brightness(100%) contrast(94%);
  }
}

